Starting another section, on efficiency concerns

--- a/qri-deterministic_querying/v2.html
+++ b/qri-deterministic_querying/v2.html
@@ -303,7 +303,9 @@ There is an additional, even more powerful implication than the simple savings i
 <p>Other schemes for linking distributed data sets exist, particularly in the form of Linked Data <span class="citation">[Heath and Bizer <a href="#ref-heath2011linked">2011</a>]</span>, but the methods of querying and accessing data currently involve database access and retrieval. With the approach outlined here, the result of any operation upon a dataset is a structure that can be utilized by any number of outside tools capable of parsing widely-adopted formats. It is an explicit design goal to present natural interoperability. It should be possible to traverse all recorded operations without the use of any database technology.</p>
 <p>The first step toward realizing the value of this interoperability will be to add support for the InterPlanetary Linked Data specification, IPLD <span class="citation">[Protocol Labs <a href="#ref-ipld2017">2017</a><a href="#ref-ipld2017">b</a>]</span>. Through use of an IPLD <em>adapter</em> it will be possible to coordinate query results with other linked data structures like blockchain-based cryptocurrencies or git version histories. This data-format bridging opens up possilibities like creating smart contracts on data procuring &amp; fullfillment (ehterium-qri linking), or syncing formal data schemas &amp; test data with source code (git-qri linking).</p>
 <p><strong>TO BE COMPLETED</strong></p>
-<h1 id="conclusion"><span class="header-section-number">5</span> Conclusion</h1>
+<h1 id="efficiency-concerns"><span class="header-section-number">5</span> Efficiency concerns</h1>
+<p><strong>TO BE COMPLETED</strong></p>
+<h1 id="conclusion"><span class="header-section-number">6</span> Conclusion</h1>
 <p><strong>TO BE COMPLETED</strong></p>
 <!--
 
